chore: extract auth logic away
